new fonts, svgs, plopfile and basics of the page

--- a/styles/_core/_settings.scss
+++ b/styles/_core/_settings.scss
@@ -3,10 +3,10 @@
 @include media-queries(true);
 
 // set font face
-@include font-face($font-brandon, 'BrandonGrotesque-Bold', $fonts-url) {
+@include font-face($font-default, 'scheargrotesk-bold', $fonts-url) {
 	font-weight: 700;
 };
-@include font-face($font-brandon, 'BrandonGrotesque-Regular', $fonts-url);
+@include font-face($font-default, 'scheargrotesk-medium', $fonts-url);
 
 
 //$icomoon-font-path: "#{$icons-url}fonts" !default;
