--- a/styles/_variables/_buttons.scss
+++ b/styles/_variables/_buttons.scss
@@ -5,7 +5,7 @@ $buttons--border:			none;
 $buttons--border-radius:	4px;
 $buttons--color: 			$white;
 $buttons--color-hover: 		$white;
-$buttons--font-family:		$font-brandon;
+$buttons--font-family:		$font-default;
 $buttons--font-size:		16px;
 $buttons--font-weight:		700;
 $buttons--height:			3.6em;
