--- a/styles/_variables/_typo.scss
+++ b/styles/_variables/_typo.scss
@@ -1,6 +1,6 @@
 $font-color: $base-color;
-$font-brandon: 'BrandonGrotesque';
-$font-family: $font-brandon, sans-serif;
+$font-default: 'SchearGrotest';
+$font-family: $font-default, sans-serif;
 
 $font-size-tiny: 12px;
 $font-size-small: 24px;
