--- a/styles/index.scss
+++ b/styles/index.scss
@@ -59,6 +59,8 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/logo-raf";
+@import "components/logo-footshop";
 
 
 // common styles
