languages and mute button now works

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -59,6 +59,9 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/scroll";
+@import "components/languages";
+@import "components/mute";
 @import "components/logo-raf";
 @import "components/logo-footshop";
 
