--- a/styles/layout/header.scss
+++ b/styles/layout/header.scss
@@ -1,5 +1,6 @@
 .header {
-	padding: 20px 10px 30px 30px;
+	background-color: #111;
+	padding: 20px 10px 25px 30px;
 	position: relative;
 	z-index: 2;
 
@@ -10,7 +11,7 @@
 
 	.hamburger {
 		float: right;
-		padding-top: 7px;
+		padding-top: 8px;
 	}
 	.logo-raf {
 		display: block;
