slides added, scroll update

--- a/styles/components/scroll.scss
+++ b/styles/components/scroll.scss
@@ -1,7 +1,7 @@
 .scroll {
 	bottom: 30px;
 	left: 50%;
-	position: absolute;
+	position: fixed;
 	text-align: center;
 	transform: translateX(-50%);
 
