--- a/styles/index.scss
+++ b/styles/index.scss
@@ -59,6 +59,7 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/Slide";
 @import "components/scroll";
 @import "components/languages";
 @import "components/mute";
