karaoke, about and history site update

--- a/styles/_variables/_links.scss
+++ b/styles/_variables/_links.scss
@@ -2,5 +2,5 @@
 $links--color: 			$base-color;
 $links--color-hover: 	$california;
 $links--color-active: 	$california;
-$links--td:				none;
+$links--td:				underline;
 $links--td-hover:		none;
