--- a/styles/_common/globals.scss
+++ b/styles/_common/globals.scss
@@ -9,6 +9,7 @@ body {
 	font-family: $font-family, Arial, sans-serif;
 	color: $base-color;
 	font-size: $font-size;
+	letter-spacing: 2px;
 	line-height: 1.4;
 	margin: 0;
 }
