--- a/styles/components/History.scss
+++ b/styles/components/History.scss
@@ -1,3 +1,17 @@
 .History {
 
+	.slick-arrow {
+		display: none !important;
+	}
+	.slick-list {
+		font-size: $font-size-tiny;
+		text-align: right;
+	}
+	.slick-slide {
+		padding-right: 40px;
+
+		p {
+			padding-left: 20px;
+		}
+	}
 }
