--- a/styles/components/languages.scss
+++ b/styles/components/languages.scss
@@ -1,7 +1,7 @@
 .languages {
 	float: left;
 	font-size: $font-size-small;
-	padding: 30px;
+	padding: 30px 10px 30px 30px;
 	text-align: center;
 	text-transform: uppercase;
 
