--- a/styles/components/mute.scss
+++ b/styles/components/mute.scss
@@ -1,7 +1,7 @@
 .mute {
 	float: right;
 	font-size: $font-size-small;
-	padding: 30px;
+	padding: 30px 30px 30px 10px;
 	text-align: center;
 	text-transform: uppercase;
 
