--- a/styles/components/who-is-raf.scss
+++ b/styles/components/who-is-raf.scss
@@ -1,5 +1,5 @@
 .who-is-raf {
-	font-size: 16px;
+	font-size: $font-size-tiny;
 	line-height: 18px;
 	padding: 0 30px 0 20px;
 
@@ -12,7 +12,7 @@
 
 		small {
 			float: right;
-			font-size: 16px;
+			font-size: $font-size-tiny;
 			font-weight: 400;
 			margin-top: 5px;
 			text-transform: uppercase;
@@ -20,6 +20,7 @@
 	}
 	img {
 		left: 0;
+		max-width: 90%;
 		opacity: .4;
 		position: absolute;
 	}
