ozweego bunny section

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -60,8 +60,8 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/Signature";
 @import "components/Carousel";
-@import "components/slider-controls";
 @import "components/History";
 @import "components/karaoke";
 @import "components/youtube";
