--- a/styles/components/Carousel.scss
+++ b/styles/components/Carousel.scss
@@ -1,4 +1,32 @@
 .Carousel {
+	$timeline: (
+			line-height: 20px,
+			padding: 50px,
+			stripe-width: 20px,
+			stripe-top: 35px
+	);
+
+	&.reversed {
+		.slider-controls {
+			.timeline {
+				padding-left: #{map_get($timeline, padding)};
+				padding-right: 0;
+				&:after {
+					left: #{(map_get($timeline, padding) - map_get($timeline, stripe-width)) / 2};
+					right: auto;
+				}
+			}
+		}
+
+	}
+
+	.current {
+		float: left;
+		font-size: $font-size-great;
+		font-weight: 700;
+		line-height: 1.2;
+		margin: 30px 0 0 30px;
+	}
 	.slick-arrow {
 		display: none !important;
 	}
@@ -14,23 +42,10 @@
 		}
 	}
 	.slider-controls {
-		$timeline: (
-				line-height: 20px,
-				padding-right: 50px,
-				stripe-width: 20px,
-				stripe-top: 35px
-		);
-
 		@include clearfix;
+		float: left;
 		margin: 30px 0 0 10%;
 
-		.current {
-			float: left;
-			font-size: $font-size-great;
-			font-weight: 700;
-			line-height: 1.2;
-			margin-left: 30px;
-		}
 		.timeline {
 			color: $gray;
 			float: left;
@@ -38,7 +53,7 @@
 			line-height: #{map_get($timeline, line-height)};
 			list-style: none;
 			margin: 0;
-			padding: 0 #{map_get($timeline, padding-right)} 0 0;
+			padding: 0 #{map_get($timeline, padding)} 0 0;
 			position: relative;
 
 			@for $i from 0 through 5 {
@@ -56,7 +71,7 @@
 				border-top: 1px solid $white;
 				content: '';
 				position: absolute;
-				right: #{(map_get($timeline, padding-right) - map_get($timeline, stripe-width)) / 2};
+				right: #{(map_get($timeline, padding) - map_get($timeline, stripe-width)) / 2};
 				top: #{map_get($timeline, stripe-top)};
 				width: #{map_get($timeline, stripe-width)};
 			}
