--- a/styles/index.scss
+++ b/styles/index.scss
@@ -60,6 +60,7 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/RafInFs";
 @import "components/Signature";
 @import "components/Carousel";
 @import "components/History";
