--- a/styles/index.scss
+++ b/styles/index.scss
@@ -69,7 +69,7 @@
 @import "components/youtube";
 @import "components/who-is-raf";
 @import "components/Slide";
-@import "components/scroll";
+@import "components/scroll-down";
 @import "components/languages";
 @import "components/mute";
 @import "components/logo-raf";
