--- a/styles/index.scss
+++ b/styles/index.scss
@@ -60,6 +60,7 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/Slider";
 @import "components/Socials";
 @import "components/RafInFs";
 @import "components/Signature";
@@ -68,7 +69,6 @@
 @import "components/karaoke";
 @import "components/youtube";
 @import "components/who-is-raf";
-@import "components/Slide";
 @import "components/scroll-down";
 @import "components/languages";
 @import "components/mute";
