big update, hard to comment:)

--- a/styles/_variables/_colors.scss
+++ b/styles/_variables/_colors.scss
@@ -1,6 +1,7 @@
 // names used from: http://chir.ag/projects/name-that-color/
 
 $black: 			#000;
+$cod-gray: 			#111;
 $dusty-gray:		#999;
 $dove-gray:			#666;
 $mine-shaft:		#333;
