--- a/styles/components/RafInFs.scss
+++ b/styles/components/RafInFs.scss
@@ -2,7 +2,7 @@
 	.collection {
 		color: $black;
 		margin: 0 auto;
-		padding: $padding--default;
+		padding: 0 $padding--default $padding--default;
 		position: relative;
 		text-align: center;
 		text-transform: uppercase;
