--- a/styles/index.scss
+++ b/styles/index.scss
@@ -60,6 +60,7 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/Menu";
 @import "components/Slider";
 @import "components/Socials";
 @import "components/RafInFs";
