--- a/styles/components/Slider.scss
+++ b/styles/components/Slider.scss
@@ -1,18 +1,49 @@
 .Slider {
 
 	.slide {
+		$animationsDuration: .7s;
+
 		min-height: 100vh;
 		padding-top: 100px;
 		position: relative;
 
+		&.active {
+			.content {
+				opacity: 1;
+				top: 0;
+			}
+			.heading {
+				margin-top: 0;
+				opacity: 1;
+			}
+			.image {
+				left: 0;
+				opacity: .4;
+			}
+		}
+
+		.content {
+			opacity: 0;
+			position: relative;
+			top: -20px;
+			transition: top $animationsDuration, opacity $animationsDuration;
+		}
 		.heading {
 			line-height: normal;
+			margin-top: 50px;
+			opacity: 0;
 			position: absolute;
 			right: 0;
 			top: 80px;
 			transform-origin: top right;
 			transform: rotate(90deg) translateX(100%);
 			z-index: 1;
+			transition: margin-top $animationsDuration, opacity $animationsDuration;
+		}
+		.image {
+			left: 5%;
+			opacity: 1;
+			transition: left $animationsDuration, opacity $animationsDuration;
 		}
 	}
 }
