--- a/styles/components/Menu.scss
+++ b/styles/components/Menu.scss
@@ -1,6 +1,8 @@
 .Menu {
 	font-size: $font-size-small;
-	position: relative;
+	left: 0;
+	position: fixed;
+	top: 0;
 	z-index: 11;
 
 	.hamburger {
