desktop menu, minor component updates

--- a/styles/components/Menu.scss
+++ b/styles/components/Menu.scss
@@ -1,4 +1,5 @@
 .Menu {
+	bottom: 0;
 	font-size: $font-size-small;
 	left: 0;
 	position: fixed;
@@ -32,6 +33,31 @@
 			padding: 5px 30px;
 			position: relative;
 			will-change: left, opacity;
+		}
+	}
+
+	@include media(phablet) {
+		font-size: $font-size-tiny;
+		text-transform: uppercase;
+
+		.items {
+			bottom: auto;
+			text-align: center;
+			transform: rotate(-90deg);
+			transform-origin: top left;
+			top: 100%;
+			width: 100vh;
+		}
+		ul {
+			background-color: transparent;
+
+			li {
+				display: inline-block;
+
+				&.active a {
+					text-decoration: underline;
+				}
+			}
 		}
 	}
 }
