--- a/styles/index.scss
+++ b/styles/index.scss
@@ -60,6 +60,8 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/Cites";
+@import "components/LogoFootshop";
 @import "components/Menu";
 @import "components/Slider";
 @import "components/Socials";
@@ -73,7 +75,6 @@
 @import "components/scroll-down";
 @import "components/languages";
 @import "components/logo-raf";
-@import "components/logo-footshop";
 
 
 // common styles
