--- a/styles/components/Carousel.scss
+++ b/styles/components/Carousel.scss
@@ -20,7 +20,7 @@
 
 	}
 
-	.current {
+	.counter {
 		float: left;
 		font-size: $font-size-great;
 		font-weight: 700;
@@ -41,6 +41,7 @@
 			img,
 			p {
 				opacity: 1;
+				transition-delay: .5s;
 			}
 			img {
 				top: 0;
@@ -103,6 +104,7 @@
 			}
 
 			li {
+				cursor: pointer;
 				transition: margin-top .5s, color .5s;
 
 				&:first-child {
@@ -114,6 +116,7 @@
 			float: left;
 
 			svg {
+				cursor: pointer;
 				fill: $white;
 				width: 60px;
 			}
