--- a/styles/components/who-is-raf.scss
+++ b/styles/components/who-is-raf.scss
@@ -28,4 +28,13 @@
 		padding-top: 20%;
 		position: relative;
 	}
+
+	@include media(phablet) {
+		font-size: $font-size;
+		line-height: 1.1;
+
+		p {
+			padding: 30% 0 0 30%;
+		}
+	}
 }
