--- a/styles/layout/wrapper.scss
+++ b/styles/layout/wrapper.scss
@@ -1,12 +1,7 @@
 .wrapper {
-	@include clearfix;
 	clear: both;
 	display: block;
 	margin: 0 auto;
 	max-width: $wrapper--width;
-
-	&--bigger {
-		@extend .wrapper;
-		max-width: $wrapper--width + 370;
-	}
+	position: relative;
 }
