--- a/styles/components/Carousel.scss
+++ b/styles/components/Carousel.scss
@@ -7,17 +7,14 @@
 	);
 
 	&.reversed {
-		.slider-controls {
-			.timeline {
-				padding-left: #{map_get($timeline, padding)};
-				padding-right: 0;
-				&:after {
-					left: #{(map_get($timeline, padding) - map_get($timeline, stripe-width)) / 2};
-					right: auto;
-				}
+		.timeline {
+			padding-left: #{map_get($timeline, padding)};
+			padding-right: 0;
+			&:after {
+				left: #{(map_get($timeline, padding) - map_get($timeline, stripe-width)) / 2};
+				right: auto;
 			}
 		}
-
 	}
 
 	.counter {
@@ -38,95 +35,153 @@
 		padding-right: 40px;
 
 		&.slick-active {
-			img,
-			p {
-				opacity: 1;
-				transition-delay: .5s;
-			}
-			img {
-				top: 0;
-			}
-			p {
-				top: 0;
-			}
+
 		}
 
-		img,
-		p {
-			opacity: 0;
-			transition: all .5s;
+		img, p {
+			position: relative;
 		}
-
+		h3 {
+			font-size: 30px;
+			margin-bottom: 0;
+			text-transform: none;
+		}
 		img {
-			opacity: 0;
-			position: relative;
-			top: -20px;
+			max-height: 30vh;
 		}
-		p {
-			padding-left: 20px;
-			position: relative;
-			top: 20px;
-		}
+	}
+	.slick-slider {
+		clear: both;
+		margin: auto;
+		max-width: $wrapper--width;
 	}
 	.slider-controls {
 		@include clearfix;
 		float: left;
 		margin: 30px 0 0 10%;
+	}
+	.step {
+		float: left;
 
-		.timeline {
-			color: $gray;
-			float: left;
-			font-size: $font-size-tiny;
-			line-height: #{map_get($timeline, line-height)};
-			list-style: none;
-			margin: 0;
-			padding: 0 #{map_get($timeline, padding)} 0 0;
-			position: relative;
+		svg {
+			cursor: pointer;
+			fill: $white;
+			width: 60px;
+		}
+	}
+	.timeline {
+		color: $gray;
+		float: left;
+		font-size: $font-size-tiny;
+		line-height: #{map_get($timeline, line-height)};
+		list-style: none;
+		margin: 0;
+		padding: 0 #{map_get($timeline, padding)} 0 0;
+		position: relative;
 
-			@for $i from 0 through 5 {
-				&.active#{$i} li {
-					&:first-child {
-						margin-top: #{map_get($timeline, line-height) * (-$i + 1) + 5};
-					}
-					&:nth-child(#{$i + 1}) {
-						color: $white;
-					}
-				}
-			}
-
-			&:after {
-				border-top: 1px solid $white;
-				content: '';
-				position: absolute;
-				right: #{(map_get($timeline, padding) - map_get($timeline, stripe-width)) / 2};
-				top: #{map_get($timeline, stripe-top)};
-				width: #{map_get($timeline, stripe-width)};
-			}
-
-			li {
-				cursor: pointer;
-				transition: margin-top .5s, color .5s;
-
+		@for $i from 0 through 5 {
+			&.active#{$i} li {
 				&:first-child {
-					margin-top: #{map_get($timeline, line-height) + 5};
+					margin-top: #{map_get($timeline, line-height) * (-$i + 1) + 5};
 				}
 			}
 		}
-		.step {
-			float: left;
 
-			svg {
-				cursor: pointer;
-				fill: $white;
-				width: 60px;
+		&:after {
+			border-top: 1px solid $white;
+			content: '';
+			position: absolute;
+			right: #{(map_get($timeline, padding) - map_get($timeline, stripe-width)) / 2};
+			top: #{map_get($timeline, stripe-top)};
+			width: #{map_get($timeline, stripe-width)};
+		}
+
+		li {
+			cursor: pointer;
+			transition: all .5s;
+
+			&:first-child {
+				margin-top: #{map_get($timeline, line-height) + 5};
+			}
+			&.active {
+				color: $white;
 			}
 		}
 	}
 
 
 	@include media(phablet) {
+
+		&.reversed {
+			.slick-slide {
+				padding-top: 0;
+
+				img {
+					margin-left: 0;
+				}
+			}
+		}
+
+		.bundled {
+			left: 13%;
+			position: absolute;
+			top: 50px;
+			z-index: 1;
+		}
+		.counter {
+			margin-top: 0;
+		}
 		.slick-list {
-			font-size: $font-size;
+			font-size: $font-size-small;
+		}
+		.slick-slide {
+			padding-right: 0;
+			padding-top: 100px;
+			text-align: right;
+
+			.info {
+				padding-left: 25%;
+				position: absolute;
+				right: 0;
+				top: 0;
+			}
+
+			img {
+				float: right;
+				max-height: 50vh;
+			}
+		}
+		.slick-slider {
+			padding-top: 50px;
+		}
+		.slider-controls {
+			margin: 0;
+			position: absolute;
+			top: 5%;
+		}
+		.timeline {
+			bottom: 0;
+			left: 50px;
+			padding: 0 0 0 50px;
+			position: absolute;
+			text-transform: uppercase;
+			transform: rotate(-90deg);
+			transform-origin: top left;
+
+			&:after {
+				display: none;
+			}
+
+			li {
+				display: inline-block;
+				margin-top: 0 !important;
+				padding: 0 15px;
+				position: relative;
+
+				&.active {
+
+				}
+			}
 		}
 	}
 }
