--- a/styles/components/LogoFootshop.scss
+++ b/styles/components/LogoFootshop.scss
@@ -1,13 +1,14 @@
 .LogoFootshop {
-	position: absolute;
+
+	&.bigger {
+		svg {
+			width: 80px;
+		}
+	}
 
 	svg {
 		fill: $white;
 		width: 50px;
-
-		&.bigger {
-			width: 80px;
-		}
 	}
 
 	@include media(phablet) {
