--- a/styles/components/Menu.scss
+++ b/styles/components/Menu.scss
@@ -53,6 +53,8 @@
 
 			li {
 				display: inline-block;
+				padding-left: 15px;
+				padding-right: 15px;
 
 				&.active a {
 					text-decoration: underline;
