--- a/styles/components/who-is-raf.scss
+++ b/styles/components/who-is-raf.scss
@@ -3,6 +3,11 @@
 	line-height: 18px;
 	padding: 0 30px 0 20px;
 
+	.link {
+		display: inline-block;
+		margin-top: $margin--default;
+	}
+
 	img {
 		left: 0;
 		max-width: 90%;
@@ -17,6 +22,8 @@
 	@include media(phablet) {
 		font-size: $font-size;
 		line-height: 1.1;
+		max-width: $wrapper--width;
+		margin: auto;
 
 		p {
 			padding: 30% 0 0 30%;
