--- a/styles/components/youtube.scss
+++ b/styles/components/youtube.scss
@@ -4,8 +4,11 @@
 	position: relative;
 
 	.mute {
+		position: absolute;
+		right: 0;
+		z-index: 1;
+
 		cursor: pointer;
-		float: right;
 		font-size: $font-size-small;
 		padding: 30px 30px 30px 10px;
 		text-align: center;
@@ -25,6 +28,9 @@
 			fill: $white;
 			width: 30px;
 		}
+	}
+	.video-wrapper {
+		clear: both;
 	}
 	.video {
 		clear: both;
@@ -61,10 +67,7 @@
 	@include media(phablet) {
 
 		.mute {
-			position: absolute;
-			right: 0;
 			top: 100%;
-			z-index: 1;
 		}
 	}
 }
