--- a/styles/components/Carousel.scss
+++ b/styles/components/Carousel.scss
@@ -123,7 +123,7 @@
 		}
 
 		.bundled {
-			left: 13%;
+			left: 10%;
 			position: absolute;
 			top: 50px;
 			z-index: 1;
@@ -153,6 +153,7 @@
 		}
 		.slick-slider {
 			padding-top: 50px;
+			margin: 0 60px 0 20%;
 		}
 		.slider-controls {
 			margin: 0;
@@ -167,6 +168,7 @@
 			text-transform: uppercase;
 			transform: rotate(-90deg);
 			transform-origin: top left;
+			z-index: 1;
 
 			&:after {
 				display: none;
