--- a/styles/components/Carousel.scss
+++ b/styles/components/Carousel.scss
@@ -133,6 +133,7 @@
 		}
 		.slick-list {
 			font-size: $font-size-small;
+			padding: 50px 0;
 		}
 		.slick-slide {
 			padding-right: 0;
@@ -152,7 +153,6 @@
 			}
 		}
 		.slick-slider {
-			padding-top: 50px;
 			margin: 0 60px 0 20%;
 		}
 		.slider-controls {
