--- a/styles/index.scss
+++ b/styles/index.scss
@@ -60,6 +60,7 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/Lyrics";
 @import "components/Cites";
 @import "components/LogoFootshop";
 @import "components/Menu";
