--- a/styles/components/Slider.scss
+++ b/styles/components/Slider.scss
@@ -9,27 +9,30 @@
 		position: relative;
 
 		&.active {
-			.content {
+			.animate-content {
 				opacity: 1;
 				top: 0;
 			}
-			.heading {
+			.animate-heading {
 				margin-top: 0;
 				opacity: 1;
 			}
-			.image {
+			.animate-image {
 				left: 0;
-				opacity: .4;
+
+				img {
+					opacity: .4;
+				}
 			}
 		}
 
-		.content {
+		.animate-content {
 			opacity: 0;
 			position: relative;
 			top: -20px;
 			transition: top $animationsDuration, opacity $animationsDuration;
 		}
-		.heading {
+		.animate-heading {
 			line-height: normal;
 			margin-top: 50px;
 			opacity: 0;
@@ -42,10 +45,17 @@
 			transition: margin-top $animationsDuration, opacity $animationsDuration;
 			white-space: nowrap;
 		}
-		.image {
+		.animate-image {
+			background-color: $bg-color;
+			display: inline-block;
 			left: 5%;
-			opacity: 1;
-			transition: left $animationsDuration, opacity $animationsDuration;
+			position: relative;
+			transition: all $animationsDuration;
+
+			img {
+				opacity: 1;
+				transition: opacity $animationsDuration;
+			}
 		}
 	}
 	.slide-video {
@@ -54,7 +64,7 @@
 
 	@include media(phablet) {
 		.slide {
-			.heading {
+			.animate-heading {
 				font-size: $font-size-big;
 			}
 		}
