--- a/styles/components/who-is-raf.scss
+++ b/styles/components/who-is-raf.scss
@@ -3,17 +3,20 @@
 	line-height: 18px;
 	padding: 0 30px 0 20px;
 
+	.animate-image {
+		left: 0;
+		position: absolute !important;
+
+		img {
+			max-width: 90%;
+			opacity: .4;
+		}
+	}
 	.link {
 		display: inline-block;
 		margin-top: $margin--default;
 	}
 
-	img {
-		left: 0;
-		max-width: 90%;
-		opacity: .4;
-		position: absolute;
-	}
 	p {
 		padding-top: 20%;
 		position: relative;
@@ -24,6 +27,10 @@
 		line-height: 1.1;
 		max-width: $wrapper--width;
 		margin: auto;
+
+		.info {
+			position: relative;
+		}
 
 		p {
 			padding: 30% 0 0 30%;
