--- a/styles/components/who-is-raf.scss
+++ b/styles/components/who-is-raf.scss
@@ -3,13 +3,15 @@
 	line-height: 18px;
 	padding: 0 30px 0 20px;
 
-	.animate-image {
-		left: 0;
-		position: absolute !important;
+	.info {
+		.animate-image {
+			//left: 0;
+			position: absolute;
 
-		img {
-			max-width: 90%;
-			opacity: .4;
+			img {
+				max-width: 90%;
+				//opacity: .4;
+			}
 		}
 	}
 	.link {
@@ -27,13 +29,21 @@
 		line-height: 1.1;
 		max-width: $wrapper--width;
 		margin: auto;
+		padding-right: 50px;
 
 		.info {
 			position: relative;
-		}
 
+			.animate-image {
+				position: relative;
+			}
+		}
 		p {
-			padding: 30% 0 0 30%;
+			bottom: 0;
+			left: 30%;
+			padding-top: 0;
+			position: absolute;
+			right: 0;
 		}
 	}
 }
