--- a/styles/components/Carousel.scss
+++ b/styles/components/Carousel.scss
@@ -22,7 +22,7 @@
 		font-size: $font-size-great;
 		font-weight: 700;
 		line-height: 1.2;
-		margin: 30px 0 0 30px;
+		margin: 30px 0 0 20px;
 	}
 	.slick-arrow {
 		display: none !important;
@@ -48,6 +48,8 @@
 			text-transform: none;
 		}
 		img {
+			display: block;
+			margin-bottom: $margin--default;
 			max-height: 30vh;
 		}
 	}
