--- a/styles/components/RafInFs.scss
+++ b/styles/components/RafInFs.scss
@@ -6,7 +6,7 @@
 	.collection {
 		color: $black;
 		margin: 0 auto;
-		padding: 0 $padding--default $padding--default;
+		padding: 0 $padding--default $padding--small;
 		position: relative;
 		text-align: center;
 		text-transform: uppercase;
@@ -48,6 +48,9 @@
 				transform: translate(-50%, -50%);
 			}
 		}
+		img {
+			max-height: 70vh;
+		}
 		span {
 			font-size: $font-size-small;
 			letter-spacing: 3px;
@@ -56,12 +59,6 @@
 			display: block;
 			font-size: 1.3em;
 			font-weight: 400;
-		}
-	}
-
-	@include media(phablet) {
-		img {
-			height: 70vh;
 		}
 	}
 }
