--- a/styles/components/scroll-down.scss
+++ b/styles/components/scroll-down.scss
@@ -1,6 +1,7 @@
 .scroll-down {
 	bottom: 5%;
 	cursor: pointer;
+	font-size: .9em;
 	left: 50%;
 	position: fixed;
 	text-align: center;
@@ -13,7 +14,7 @@
 	}
 	svg {
 		fill: $white;
-		width: 30px;
+		width: 24px;
 
 		&.arrow {
 			animation: jumpy 1.5s infinite;
@@ -21,6 +22,14 @@
 			margin: auto;
 			position: relative;
 			width: 10px;
+		}
+	}
+
+	@include media(phablet) {
+		font-size: 1em;
+
+		svg {
+			width: 30px;
 		}
 	}
 }
