--- a/styles/index.scss
+++ b/styles/index.scss
@@ -59,6 +59,8 @@
 // reusable components
 @import "components/hamburger";
 //#generated-components
+@import "components/TurnDevice";
+@import "components/facebook-like";
 @import "components/Footer";
 @import "components/Lyrics";
 @import "components/Cites";
