--- a/styles/pages/homepage.scss
+++ b/styles/pages/homepage.scss
@@ -1,9 +1,19 @@
+#slide0 {
+	@include child-middle;
+	padding-top: 0;
+	text-align: center;
+
+	& > div {
+		max-width: $wrapper--width;
+		width: 100%;
+	}
+
+	@include media(phablet) {
+		padding: 0 50px;
+	}
+}
+
 .intro {
-	max-width: $wrapper--width;
 	margin: auto;
 	position: relative;
-	
-	@media only screen and (min-height: 800px) {
-		padding-top: 5%;
-	}
 }
