--- a/styles/_mixins/_responsive.scss
+++ b/styles/_mixins/_responsive.scss
@@ -4,14 +4,14 @@
 	$big-vh: "only screen and (min-height: 800px)" !global;
 
 	@if $mobile-first == true {
-		$desktop-lg: "only screen and (min-width: #{$container--desktop} + 1)" !global;
+		$desktop-large: "only screen and (min-width: #{$container--desktop} + 1)" !global;
 		$desktop: "only screen and (min-width: #{$container--tablet} + 1)" !global;
 		$tablet: "only screen and (min-width: #{$container--phablet} + 1)" !global;
 		$phablet: "only screen and (min-width: #{$container--mobile} + 1)" !global;
 		$mobile: "only screen" !global;
 	}
 	@else {
-		$desktop-lg: "only screen and (max-width: #{$container--desktop-lg})" !global;
+		$desktop-large: "only screen and (max-width: #{$container--desktop-lg})" !global;
 		$desktop: "only screen and (max-width: #{$container--desktop})" !global;
 		$tablet: "only screen and (max-width: #{$container--tablet})" !global;
 		$phablet: "only screen and (max-width: #{$container--phablet})" !global;
@@ -21,8 +21,8 @@
 
 @mixin media($type) {
 	$media: $mobile;
-	@if $type == desktop-lg {
-		$media: $desktop-lg;
+	@if $type == desktop-large {
+		$media: $desktop-large;
 	} @else if $type == desktop {
 		$media: $desktop;
 	} @else if $type == tablet {
